mobile dark mode fix

--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ footer a{
         width: 100%;
         padding: 0;
         margin: 0;
-        background-color: white;
+        /* background-color: white;*/
     }
 
     .text{
